--- a/codigo/lucas_duarte/templates/cadastro_doacao.html
+++ b/codigo/lucas_duarte/templates/cadastro_doacao.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Doação</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
     <header>
         <a href="#">
-            <img src="imgs/logo.png" alt="" class="px-3 logo">
+            <img src="../imgs/logo.png" alt="" class="px-3 logo">
             <h2>Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container">
             <h3>usuario</h3>
-            <img src="imgs/usuario.png" alt="" class="usuario px-3">
+            <img src="../imgs/usuario.png" alt="" class="usuario px-3">
         </a>
     </header>
 
@@ -34,19 +34,19 @@
             </select>
             <select name="quantidade" id="quantidade" required>
                 <option value="" disabled selected>Selecione a quantidade</option>
-                <option value="1unidade">1</option>
-                <option value="2unidades">2</option>
-                <option value="3unidades">3</option>
-                <option value="4unidades">4</option>
-                <option value="5unidades">5</option>
-                <option value="6unidades">6</option>
-                <option value="7unidades">7</option>
-                <option value="8unidades">8</option>
-                <option value="9unidades">9</option>
-                <option value="10unidades">10</option>
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
             </select>
-            <p>valor do(s) produto(s)</p>
-            <p>R$0</p>
+            <p>Valor do(s) produto(s):</p>
+            <p id="valorDoacao">R$0</p>
             <input type="submit">
         </form>
 
@@ -66,8 +66,11 @@
                 <p>Belo Horizonte</p>
             </div>
         </div>
-        <img src="imgs/logo.png" alt="" class="logo">
+        <img src="../imgs/logo.png" alt="" class="logo">
     </footer>
+
+
+    <script src="../script/script.js"></script>
     
 </body>
 </html>
