--- a/codigo/lucas_duarte/templates/cadastro_doacao.html
+++ b/codigo/lucas_duarte/templates/cadastro_doacao.html
@@ -4,83 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Doação</title>
+    <link rel="stylesheet" href="../../assets/base.css">
     <link rel="stylesheet" href="../static/style.css">
     <link href="https://fonts.googleapis.com/css2?family=ABeeZee&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
+
 <body>
     <header class="d-flex justify-content-between align-items-center p-3 bg-light">
         <a href="#" class="d-flex align-items-center">
-            <img src="../imgs/logo.png" alt="Logo" class="logo me-3">
+            <img src="../../assets/imgs/logo.png" alt="Logo" class="logo me-3">
             <h2 class="m-0 text-center">Alimentação <br> Para <br> Todos</h2>
         </a>
         <a href="#" class="usuario-container d-flex align-items-center">
             <h3 class="m-0 me-2">Usuário</h3>
-            <img src="../imgs/usuario.png" alt="Usuário" class="usuario">
+            <img src="../../assets/imgs/usuario.png" alt="Usuário" class="usuario">
         </a>
     </header>
 
-    <main class="container my-5">
-        <h1 class="text-center mb-4">Cadastro de Doação</h1>
-        <form action="" class="row g-3">
-            <div class="col-md-6">
-                <label for="alimento" class="form-label">Tipo de Alimento:</label>
-                <select name="alimento" id="alimento" class="form-select" required>
-                    <option value="" disabled selected>Selecione o tipo de alimento</option>
-                    <option value="macarrao">Macarrão</option>
-                    <option value="arroz">Arroz</option>
-                    <option value="feijao">Feijão</option>
-                    <option value="enlatados">Enlatados</option>
-                    <option value="outros">Outros</option>
-                </select>
+
+<main class="container-fluid my-5 px-5">
+    <div class="row">
+        <div class="col-md-6 border-end pe-4"> <!-- Adicionada a classe border-end -->
+            <h1 class="mb-4">Cadastro de Doação</h1>
+            <form action="" class="row g-3">
+                <div class="col-12">
+                    <label for="alimento" class="form-label">Tipo de Alimento:</label>
+                    <select name="alimento" id="alimento" class="form-select" required>
+                        <option value="" disabled selected>Selecione o tipo de alimento</option>
+                        <option value="macarrao">Macarrão</option>
+                        <option value="arroz">Arroz</option>
+                        <option value="feijao">Feijão</option>
+                        <option value="enlatados">Enlatados</option>
+                        <option value="outros">Outros</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <label for="quantidade" class="form-label">Quantidade:</label>
+                    <select name="quantidade" id="quantidade" class="form-select" required>
+                        <option value="" disabled selected>Selecione a quantidade</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="5">5</option>
+                        <option value="6">6</option>
+                        <option value="7">7</option>
+                        <option value="8">8</option>
+                        <option value="9">9</option>
+                        <option value="10">10</option>
+                    </select>
+                </div>
+                <div class="col-12">
+                    <p class="mb-1">Valor do(s) produto(s):</p>
+                    <p id="valorDoacao" class="fw-bold">R$0</p>
+                </div>
+                <div class="col-12">
+                    <input type="submit" class="btn btn-primary" value="Cadastrar Doação">
+                </div>
+            </form>
+        </div>
+        <div class="col-md-6 px-5">
+            <div class="card" style="width: 18rem;">
+                <div class="container text-center">
+                    <div class="row">
+                        <div class="col">
+                        Column
+                        </div>
+                        <div class="col">
+                        Column
+                        </div>
+                        <div class="col">
+                        Column
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <label for="quantidade" class="form-label">Quantidade:</label>
-                <select name="quantidade" id="quantidade" class="form-select" required>
-                    <option value="" disabled selected>Selecione a quantidade</option>
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10</option>
-                </select>
-            </div>
-            <div class="col-12">
-                <p class="mb-1">Valor do(s) produto(s):</p>
-                <p id="valorDoacao" class="fw-bold">R$0</p>
-            </div>
-            <div class="col-12 text-center">
-                <input type="submit" class="btn btn-primary" value="Cadastrar Doação">
-            </div>
-        </form>
-    </main>
+        </div>
+    </div>
+</main>
 
     <footer class="bg-light py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-center text-md-start mb-3">
-                    <h3 class="mb-2">Contato</h3>
-                    <p class="mb-1">(31) 9999-6666</p>
-                    <p>nutritech@pucminas.com.br</p>
-                </div>
-                <div class="col-md-6 text-center text-md-end">
-                    <h3 class="mb-2">Local</h3>
-                    <p>Belo Horizonte</p>
-                </div>
+        <div class="container d-flex justify-content-between align-items-center">
+            <div class="footer-left text-center text-md-start">
+                <h3 class="mb-2">Local</h3>
+                <p>Belo Horizonte</p>
             </div>
-            <div class="row mt-4">
-                <div class="col-12 text-center">
-                    <img src="../imgs/logo.png" alt="Logo" class="logo img-fluid">
-                </div>
+
+            <div class="footer-center text-center">
+                <p>© 2025 NutriTech</p>
+            </div>
+
+            <div class="footer-right text-center text-md-end">
+                <h3 class="mb-2">Contato</h3>
+                <p class="mb-1">(31) 9999-6666</p>
+                <p>nutritech@pucminas.com.br</p>
             </div>
         </div>
     </footer>
 
-    <script src="../script/script.js"></script>
 </body>
 </html>
