--- a/codigo/lucas_duarte/templates/cadastro_doacao.html
+++ b/codigo/lucas_duarte/templates/cadastro_doacao.html
@@ -25,7 +25,7 @@
 
 <main class="container-fluid my-5 px-5">
     <div class="row">
-        <div class="col-md-6 border-end pe-4"> <!-- Adicionada a classe border-end -->
+        <div class="col-md-6 border-end pe-4">
             <h1 class="mb-4">Cadastro de Doação</h1>
             <form action="" class="row g-3">
                 <div class="col-12">
@@ -65,30 +65,10 @@
             </form>
         </div>
         <div class="col-md-6 px-5">
-            <div class="card" style="width: 18rem;">
-                <div class="container text-center">
-                    <div class="row">
-                        <div class="col">
-                        Column
-                        </div>
-                        <div class="col">
-                        Column
-                        </div>
-                        <div class="col">
-                        Column
-                        </div>
-                    </div>
-                </div>
 
-
-
-                <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                </div>
+            <div class="row mt-5" id="cards-container">
+                <!-- Os cards serão inseridos aqui dinamicamente -->
             </div>
-        </div>
     </div>
 </main>
 
@@ -110,6 +90,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+Q1j6v2x4z" crossorigin="anonymous"></script>
+    <script src="../script/script.js"></script>
 </body>
 </html>
