--- a/codigo/lucas_duarte/templates/cadastro_doacao.html
+++ b/codigo/lucas_duarte/templates/cadastro_doacao.html
@@ -66,8 +66,8 @@
         </div>
         <div class="col-md-6 px-5">
 
-            <div class="row mt-5" id="cards-container">
-                <!-- Os cards serão inseridos aqui dinamicamente -->
+            <div class="row mt-5 py-5" id="cards-container">
+                
             </div>
     </div>
 </main>
