Alinhamento dos cards de descrição e informações gerais, atualização do estilo

--- a/codigo/arthur_vieira_lopes/style.css
+++ b/codigo/arthur_vieira_lopes/style.css
@@ -188,6 +188,16 @@ html, body {
   display: flex;
   flex-direction: column;
 }
+.right-column {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1;
+  min-width: 300px;
+}
+
+
+
 
 
 
