--- a/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.css
+++ b/codigo/raphael_thierry_coelho/cadastro-volutarios/cadastro-voluntarios.css
@@ -1,3 +1,145 @@
+/* Alterações Fora do Template Base*/
+
+#titulo-pagina{
+    font-size: 40px;
+    padding: 50px;
+    padding-bottom: 80px;
+    text-align: center;
+}
+
+
+#form-voluntarios{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+}
+.cadastro{
+    align-items: center;
+}
+.titulo-form{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 20px;
+    margin-right: 200px;
+    margin-left: -100px;
+}
+#container-dados{
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+    padding: 15px;
+    border-radius: 10px;
+    width: 700px;
+    margin-right: 200px;
+    margin-left: -100px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.colunas-form {
+  display: flex;
+  gap: 40px;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+input{
+    padding: 10px;
+    padding-left: 20px;
+    font-size: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 95%;
+
+}
+
+
+.container-checkboxes {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  flex: 1 1 300px;
+  margin-left: 10%;
+}
+
+.disponibilidade {
+  width: 100%;
+  align-items: center;
+}
+.titulo-disponibilidade {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.tabela-disponibilidade {
+  display: grid;
+  grid-template-columns: 100px repeat(3, 80px);
+  gap: 10px;
+  width: 400px;
+  padding: 20px;
+
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;   
+}
+
+.tabela-disponibilidade .header{
+  font-weight: bold;
+  text-align: center;
+}
+.tabela-disponibilidade .dia {
+  font-weight: bold;
+}
+
+.areas-interesse{
+    width: 100%;
+    margin-top: 60px;
+}
+.titulo-areas-interesse {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.tabela-areas-interesse .opcao {
+  font-weight: bold;
+}
+.tabela-areas-interesse {
+  display: grid;
+  grid-template-columns: 250px repeat(1, 150px);
+  gap: 10px;
+  width: 400px;
+  padding: 20px;
+
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 5px; 
+}
+
+#btn-submit{
+    border-radius: 100px;
+    padding: 25px;
+    font-size: 20px;
+    width: 200px;
+    color: whitesmoke;
+    background: linear-gradient(to right, rgb(114, 212, 114), rgb(67, 126, 67));
+    background-color: green;
+    border-style: none;
+    cursor: pointer;
+    margin: 50px;
+}
+#btn-submit:hover {
+    background: none;
+    background-color: #3e8e41;
+    transition: 0.5s;
+}
+
+
 /* header */
 header {
     display: flex;
