--- a/codigo/arthur_vieira_lopes/style.css
+++ b/codigo/arthur_vieira_lopes/style.css
@@ -1,5 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 body {
-  font-family: 'Segoe UI', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background: white
   margin: 0;
   padding: 20px;
@@ -30,7 +31,7 @@ h1 {
 }
 
 .card {
-  background-color: white;
+  background-color: gray
   border-radius: 12px;
   box-shadow: 0 4px 10px rgba(0,0,0,0.1);
   padding: 20px;
