--- a/codigo/artur_de_figueiredo_neves/badages/style.css
+++ b/codigo/artur_de_figueiredo_neves/badages/style.css
@@ -157,3 +157,13 @@ footer a:hover {
     text-align: center;
     line-height: 1.4;
 }
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
